unpackaged/main/default/objects/Opportunity/fields/Converted_DCC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Converted_DCC_Volume__c</fullName>
    <formula>Total_Processed_Value__c * Eligible_DCC_Volume__c * Opt_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted DCC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>