unpackaged/main/default/objects/Opportunity/fields/Count_of_Acquiring_Fees__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Acquiring_Fees__c</fullName>
    <description>To identify of Opportunity has Acquiring Fees children</description>
    <label>Count of Acquiring Fees</label>
    <summaryForeignKey>Acquiring_Fees__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>