unpackaged/main/default/objects/Opportunity/fields/Count_of_Charges__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Charges__c</fullName>
    <description>To identify if Opportunity has Charges children</description>
    <label>Count of Charges</label>
    <summaryForeignKey>Charges__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>