unpackaged/main/default/objects/Opportunity/fields/Count_of_DCC__c.field-meta.xml
<CustomField>
    <fullName>Count_of_DCC__c</fullName>
    <description>To identify if Opportunity has DCC children</description>
    <label>Count of DCC</label>
    <summaryForeignKey>DCC_Proposal__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>