unpackaged/main/default/objects/Opportunity/fields/Count_of_Gateway_Processing__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Gateway_Processing__c</fullName>
    <description>To identify if opportunity has Gateway Processing Children</description>
    <label>Count of Gateway Processing</label>
    <summaryForeignKey>Gateway_Processing__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>