unpackaged/main/default/objects/Opportunity/fields/Count_of_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Hardware__c</fullName>
    <description>To identify if Opportunity has Hardware children</description>
    <label>Count of Hardware</label>
    <summaryForeignKey>Hardware__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>