unpackaged/main/default/objects/Opportunity/fields/Count_of_Partners__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Partners__c</fullName>
    <description>To identify if Opportunity has Partners children</description>
    <label>Count of Partners</label>
    <summaryForeignKey>Indirect_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>