unpackaged/main/default/objects/Opportunity/fields/Count_of_Subscription_Fees__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Subscription_Fees__c</fullName>
    <description>To identify of Opportunity has Subscription Fees children</description>
    <label>Count of Subscription Fees</label>
    <summaryForeignKey>Subscription_Fees__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>