unpackaged/main/default/objects/Opportunity/fields/Count_of_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Tax_Free__c</fullName>
    <description>To identify if Opportunity has Tax Free children</description>
    <label>Count of Tax Free</label>
    <summaryForeignKey>TF_Proposal__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>