unpackaged/main/default/objects/Opportunity/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <formula>IF( OwnerId  = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>