unpackaged/main/default/objects/Opportunity/fields/Current_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Current_Solutions__c</fullName>
    <label>Current Solutions</label>
    <type>TextArea</type>
</CustomField>