unpackaged/main/default/objects/Opportunity/fields/Current_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Duration__c</fullName>
    <formula>IF( ISBLANK(LastStageChangeDate) , (Now() -  CreatedDate ), (Now() - LastStageChangeDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>