unpackaged/main/default/objects/Opportunity/fields/Current_Temp__c.field-meta.xml
<CustomField>
    <fullName>Current_Temp__c</fullName>
    <formula>IF(TEXT(Current_Temp_Check__c) = &quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;, 20, 20),
IF(TEXT(Current_Temp_Check__c) = &quot;Amber&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;, 20, 20),
IF(TEXT(Current_Temp_Check__c) = &quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;, 20, 20),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Temp</label>
    <type>Text</type>
</CustomField>