unpackaged/main/default/objects/Opportunity/fields/Current_Temp_Check__c.field-meta.xml
<CustomField>
    <fullName>Current_Temp_Check__c</fullName>
    <label>Current Temp Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>