unpackaged/main/default/objects/Opportunity/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bank/Acquirer</fullName>
            </value>
            <value>
                <fullName>GP-Merchant</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planet Direct Merchant</fullName>
            </value>
            <value>
                <fullName>Worldpay-Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>