unpackaged/main/default/objects/Opportunity/fields/DCC__c.field-meta.xml
<CustomField>
    <fullName>DCC__c</fullName>
    <formula>IF(DCC_Annual_Eligible_Transactions__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC</label>
    <type>Checkbox</type>
</CustomField>