unpackaged/main/default/objects/Opportunity/fields/DCC_Annual_GP_Weighted__c.field-meta.xml
<CustomField>
    <fullName>DCC_Annual_GP_Weighted__c</fullName>
    <formula>DCC_Annual_Gross_Profit1__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC: Annual GP Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>