unpackaged/main/default/objects/Opportunity/fields/DCC_Annual_Gross_Profit1__c.field-meta.xml
<CustomField>
    <fullName>DCC_Annual_Gross_Profit1__c</fullName>
    <formula>DCC_Converted_Annual_Value1__c * GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC : Annual Gross Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>