unpackaged/main/default/objects/Opportunity/fields/DCC_Conv_Trx__c.field-meta.xml
<CustomField>
    <fullName>DCC_Conv_Trx__c</fullName>
    <formula>DCC_Hit_Rate__c *  DCC_Annual_Eligible_Transactions__c</formula>
    <label>DCC : Conv Trans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>