unpackaged/main/default/objects/Opportunity/fields/DCC_Converted_Annual_Value1__c.field-meta.xml
<CustomField>
    <fullName>DCC_Converted_Annual_Value1__c</fullName>
    <formula>DCC_Value_Per_Trans1__c * DCC_Conv_Trx__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC : Converted Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>