unpackaged/main/default/objects/Opportunity/fields/DCC_Eligible_Spend__c.field-meta.xml
<CustomField>
    <fullName>DCC_Eligible_Spend__c</fullName>
    <formula>DCC_Converted_Annual_Value1__c /  DCC_Hit_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC: Eligible Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>