unpackaged/main/default/objects/Opportunity/fields/DCC_GP__c.field-meta.xml
<CustomField>
    <fullName>DCC_GP__c</fullName>
    <formula>DCC_Annual_Gross_Profit1__c * DCC_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>