unpackaged/main/default/objects/Opportunity/fields/DCC_Provider__c.field-meta.xml
<CustomField>
    <fullName>DCC_Provider__c</fullName>
    <label>DCC Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alliex Co</fullName>
            </value>
            <value>
                <fullName>ConCardis</fullName>
            </value>
            <value>
                <fullName>Cuscal</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>EuroNet WorldWide</fullName>
            </value>
            <value>
                <fullName>FEXCO</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>Global Blue</fullName>
            </value>
            <value>
                <fullName>Monex</fullName>
            </value>
            <value>
                <fullName>Pure Commerce</fullName>
            </value>
            <value>
                <fullName>Redsys</fullName>
            </value>
            <value>
                <fullName>Six Payments</fullName>
            </value>
            <value>
                <fullName>Worldline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>