unpackaged/main/default/objects/Opportunity/fields/DCC_Type__c.field-meta.xml
<CustomField>
    <fullName>DCC_Type__c</fullName>
    <label>DCC Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCC in Card Present</fullName>
            </value>
            <value>
                <fullName>eDCC</fullName>
            </value>
            <value>
                <fullName>MCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>