unpackaged/main/default/objects/Opportunity/fields/DCC_Value_Per_Trans1__c.field-meta.xml
<CustomField>
    <fullName>DCC_Value_Per_Trans1__c</fullName>
    <label>DCC : Value Per Trans</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>