unpackaged/main/default/objects/Opportunity/fields/Disable_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>