unpackaged/main/default/objects/Opportunity/fields/Eligible_DCC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Eligible_DCC_Volume__c</fullName>
    <description>DCC Calculation</description>
    <inlineHelpText>aka foreign volume</inlineHelpText>
    <label>Eligible DCC Value %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>