unpackaged/main/default/objects/Opportunity/fields/Estimated_Size_Of_The_Prize__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Size_Of_The_Prize__c</fullName>
    <description>Hoist</description>
    <label>Estimated Size Of The Prize</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>