unpackaged/main/default/objects/Opportunity/fields/Expected_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Expected_Uplift__c</fullName>
    <label>Expected Uplift (%)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>