unpackaged/main/default/objects/Opportunity/fields/FY15_GP__c.field-meta.xml
<CustomField>
    <fullName>FY15_GP__c</fullName>
    <formula>IF(
Contract_Start_Date__c &lt; DATE(YEAR(TODAY()),01,01),
DCC_Annual_Gross_Profit1__c  *  FY15__c, 
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC : FY GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>