unpackaged/main/default/objects/Opportunity/fields/FY15_NC__c.field-meta.xml
<CustomField>
    <fullName>FY15_NC__c</fullName>
    <formula>IF(Contract_Start_Date__c &lt; DATE(YEAR(TODAY()),01,01), TF_Annual_Net_Commission1__c *  FY15__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF : FY NC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>