unpackaged/main/default/objects/Opportunity/fields/Gaps__c.field-meta.xml
<CustomField>
    <fullName>Gaps__c</fullName>
    <label>Gaps</label>
    <type>TextArea</type>
</CustomField>