unpackaged/main/default/objects/Opportunity/fields/GC_Per_Voucher__c.field-meta.xml
<CustomField>
    <fullName>GC_Per_Voucher__c</fullName>
    <formula>IF(AND(TF_Annual_GC__c &gt; 0, TF_Annual_Vouchers__c &gt; 0) , (TF_Annual_GC__c /  TF_Annual_Vouchers__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF : GC Per Form</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>