unpackaged/main/default/objects/Opportunity/fields/GP_Acq__c.field-meta.xml
<CustomField>
    <fullName>GP_Acq__c</fullName>
    <label>GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>