unpackaged/main/default/objects/Opportunity/fields/GP_Part_of_Total__c.field-meta.xml
<CustomField>
    <fullName>GP_Part_of_Total__c</fullName>
    <formula>GP__c * (DCC_Converted_Annual_Value1__c/ Parent_Opportunity__r.All_Converted_Annual_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP % Part of Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>