unpackaged/main/default/objects/Opportunity/fields/GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>GP_Percent__c</fullName>
    <label>GP %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>