unpackaged/main/default/objects/Opportunity/fields/Hardware_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Quantity__c</fullName>
    <description>Sum of child hardware quantities</description>
    <label>Hardware Quantity</label>
    <summarizedField>Hardware__c.Quantity__c</summarizedField>
    <summaryForeignKey>Hardware__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>