unpackaged/main/default/objects/Opportunity/fields/Head_of_Retail_Approval__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Retail_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head of Retail Approval</label>
    <type>Checkbox</type>
</CustomField>