unpackaged/main/default/objects/Opportunity/fields/High_Low_Value__c.field-meta.xml
<CustomField>
    <fullName>High_Low_Value__c</fullName>
    <formula>IF(ATV__c &lt; 300, &quot;Low&quot;,
IF(AND(ATV__c &gt;= 300, ATV__c &lt; 600), &quot;Medium&quot;,
IF(ATV__c &gt;= 600, &quot;High&quot;, &quot;Incomplete&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High/Low Value</label>
    <type>Text</type>
</CustomField>