unpackaged/main/default/objects/Opportunity/fields/Hit_Rate_Part_of_Total__c.field-meta.xml
<CustomField>
    <fullName>Hit_Rate_Part_of_Total__c</fullName>
    <formula>DCC_Hit_Rate__c * (DCC_Annual_Eligible_Transactions__c /  Parent_Opportunity__r.All_Annual_Eligible_Transactions__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hit Rate Part of Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>