unpackaged/main/default/objects/Opportunity/fields/In_Year_GP__c.field-meta.xml
<CustomField>
    <fullName>In_Year_GP__c</fullName>
    <formula>Total_Weighted__c / Start_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Year GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>