unpackaged/main/default/objects/Opportunity/fields/In_Year_NC__c.field-meta.xml
<CustomField>
    <fullName>In_Year_NC__c</fullName>
    <formula>IF(Contract_Start_Date_Month__c = 1, TF_Annual_NC__c * 1,
IF(Contract_Start_Date_Month__c = 2, TF_Annual_NC__c * 0.9331973,
IF(Contract_Start_Date_Month__c = 3, TF_Annual_NC__c * 0.8783086,
IF(Contract_Start_Date_Month__c = 4, TF_Annual_NC__c * 0.8201378,
IF(Contract_Start_Date_Month__c = 5, TF_Annual_NC__c * 0.7555707,
IF(Contract_Start_Date_Month__c = 6, TF_Annual_NC__c * 0.6816043,
IF(Contract_Start_Date_Month__c = 7, TF_Annual_NC__c * 0.5999116,
IF(Contract_Start_Date_Month__c = 8, TF_Annual_NC__c * 0.5001037,
IF(Contract_Start_Date_Month__c = 9, TF_Annual_NC__c * 0.379803,
IF(Contract_Start_Date_Month__c = 10, TF_Annual_NC__c * 0.2700752,
IF(Contract_Start_Date_Month__c = 11, TF_Annual_NC__c * 0.1573122,
IF(Contract_Start_Date_Month__c = 12, TF_Annual_NC__c * 0.0752389,0))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Year NC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>