unpackaged/main/default/objects/Opportunity/fields/Integrator__c.field-meta.xml
<CustomField>
    <fullName>Integrator__c</fullName>
    <formula>Account.Integrator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integrator PMS</label>
    <type>Text</type>
</CustomField>