unpackaged/main/default/objects/Opportunity/fields/Integrator_POS__c.field-meta.xml
<CustomField>
    <fullName>Integrator_POS__c</fullName>
    <formula>Account.Integrator_POS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integrator POS</label>
    <type>Text</type>
</CustomField>