unpackaged/main/default/objects/Opportunity/fields/Interchange__c.field-meta.xml
<CustomField>
    <fullName>Interchange__c</fullName>
    <label>Interchange++</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>