unpackaged/main/default/objects/Opportunity/fields/Introduction_Date__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Date__c</fullName>
    <label>Introduction Date</label>
    <type>Date</type>
</CustomField>