unpackaged/main/default/objects/Opportunity/fields/JCB__c.field-meta.xml
<CustomField>
    <fullName>JCB__c</fullName>
    <label>JCB %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>