unpackaged/main/default/objects/Opportunity/fields/JCB_of_Total__c.field-meta.xml
<CustomField>
    <fullName>JCB_of_Total__c</fullName>
    <label>JCB % of Total</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>