unpackaged/main/default/objects/Opportunity/fields/Loss_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Loss_Analysis__c</fullName>
    <label>Loss Analysis</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>